# model_service_rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  reame.md
src/: main.rs  model.rs  utils.rs
