[package]
name = "model_service_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tensorflow = "0.21.0"
image = "0.24.6"
reqwest = { version = "0.12", features = ["json"] }
